fix issue calendar not scrolling and being mostly cut off on screen > 768

--- a/css/main.css
+++ b/css/main.css
@@ -388,9 +388,10 @@ footer {
 				text-align: right;
 			}
 			#calendar {
-				position: fixed;
-				left: 10%;
+				/*position: fixed;*/
+				margin-left: 10%;
 				width: 80%;
+				margin-bottom: 1.5em;
 			}
 }
 
